formulario de contacto agregado

--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
         </div>
     </nav>
     <header>
+        <div class="d-flex align-items-center p-5 mt-5">
+            <div class="flex-shrink-0">
+                <img src="./assets/img/lucia.jpeg" alt="foto persona">
+            </div>
+            <div class="flex-grow-1 ms-3">
+                <p>Apasionada y dedicada programadora web con basta experiencia en el desarrollo de aplicaciones y sitios web dinámicos. Capaz de transformar conceptos creativos en soluciones tecnológicas innovadoras, combinando habilidades técnicas con
+                    un enfoque orientado al usuario. Con experiencia sólida en lenguajes de programación front-end y back-end, así como en el diseño y la implementación de bases de datos. Poseo una sólida comprensión de los principios de diseño web, usabilidad
+                    y accesibilidad.</p>
+            </div>
+        </div>
+        <button type="button" class="btn btn-primary ">Botón Primario</button>
+
+
+
 
 
         </div>
