--- a/contacto.html
+++ b/contacto.html
@@ -37,10 +37,41 @@
         </div>
     </nav>
     <header>
+        <div class="row">
+            <div class=" col align center m-5 p-5">
+                <h2>FORMULARIO DE CONTACTO</h2>
+                <label for="exampleFormControlInput1 " class="form-label m-2">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
 
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required>
 
+                <label for="telefono">Teléfono:</label>
+                <input type="tel" id="telefono" name="telefono">
+
+                <label for="pais">País:</label>
+                <input type="text" id="pais" name="pais">
+
+                <button type="submit">Enviar</button>
+            </div>
         </div>
+        <div class="row">
+            <div class=" col align-self-center m-5 ">
+                <label for="exampleFormControlTextarea1" class="form-label">Detalle sus requerimientos</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+        </div>
+
+
+
+
+
+
+
     </header>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
