--- a/index.html
+++ b/index.html
@@ -37,24 +37,59 @@
         </div>
     </nav>
     <header>
-        <div class="d-flex align-items-center p-5 mt-5">
+        <div class="d-flex align-items-center p-5 mt-5 text-bg-warning p-3">
             <div class="flex-shrink-0">
                 <img src="./assets/img/lucia.jpeg" alt="foto persona">
             </div>
-            <div class="flex-grow-1 ms-3">
+            <div class="flex-grow-1 ms-3 ">
                 <p>Apasionada y dedicada programadora web con basta experiencia en el desarrollo de aplicaciones y sitios web dinámicos. Capaz de transformar conceptos creativos en soluciones tecnológicas innovadoras, combinando habilidades técnicas con
                     un enfoque orientado al usuario. Con experiencia sólida en lenguajes de programación front-end y back-end, así como en el diseño y la implementación de bases de datos. Poseo una sólida comprensión de los principios de diseño web, usabilidad
                     y accesibilidad.</p>
             </div>
         </div>
-        <button type="button" class="btn btn-primary ">Botón Primario</button>
-
-
-
-
-
+        <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+            <button type="button" class="btn btn-success  btn-lg">Contacto</button></div>
         </div>
+
+        <section class="eduacion ">
+            <div class="container-fluid m-5 ">
+                <div class="d-flex p-2 text-center">
+                    <h3>EDUCACIÓN</h3>
+                </div>
+                <div class="row">
+                    <div class="col p-5">
+                        <h2>Enseñanza Básica</h2> Escuela Standard Temuco</div>
+                    <div class="col p-5">
+                        <h2>Enseñanza Media</h2> Liceo Comercial Temuco</div>
+                    <div class="col p-5">
+                        <h2>Enseñanza Superior</h2> Academia Desafio Latam</div>
+                </div>
+        </section>
+        <section class="experiencia">
+            <ol class="list-group list-group-numbered">
+
+                <li class="list-group-item fs-2 text-center">Inmobiliaria Ainoha</li>
+                <li class="list-group-item fs-2 text-center">Retail Comercio</li>
+                <li class="list-group-item fs-2 text-center">Entidad Bancaria</li>
+            </ol>
+        </section>
     </header>
+    <footer>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center m-5">
+                <li class="page-item disabled">
+                    <a class="page-link">Previous</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            </ul>
+        </nav>
+    </footer class="bg-dark text-center text-light p-4">
+    <p class="m-3 text-center bg-warning emphasis text-primary ">Lucia Pinilla 2024. Todos los derechos reservados.</p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
