--- a/contacto.html
+++ b/contacto.html
@@ -65,14 +65,10 @@
         </div>
 
 
-
-
-
-
-
     </header>
 
-
+    </footer class="bg-dark text-center text-light p-4">
+    <p class="m-3 text-center bg-warning emphasis text-primary ">Lucia Pinilla 2024. Todos los derechos reservados.</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
