--- a/portafolio.html
+++ b/portafolio.html
@@ -29,24 +29,58 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">CONTACTO</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                    </li>
+
                 </ul>
             </div>
         </div>
     </nav>
     <header>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 col-sm-6 col-12 p-5 ">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./assets/img/primer-cv.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">CURRICULUM VITAE HTML</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 col-sm-6 col-12 p-5 ">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./assets/img/landing-page.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">LANDING PAGE PIEDRAS PRECIOSAS </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-12 p-5">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./assets/img/iguana-page.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">IGUANA PAGE </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-12 p-5">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./assets/img/cuppon.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">CUPPON</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
-        </div>
-    </header>encabezado
-    <main>
 
-    </main> contenido
-    <section>secciones
 
-    </section>
+
+    </header>
+
 
     </footer class="bg-dark text-center text-light p-4">
     <p class="m-3 text-center bg-warning emphasis text-primary ">Lucia Pinilla 2024. Todos los derechos reservados.</p>
